--- a/SageOneSample.Repository/SageOneSample.Repository.csproj
+++ b/SageOneSample.Repository/SageOneSample.Repository.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FakeSudokuSolutionsRepository.cs" />
     <Compile Include="ISudokuSolutionsRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Puzzle.cs" />
