--- a/SageOneSample.Business/SageOneSample.Business.csproj
+++ b/SageOneSample.Business/SageOneSample.Business.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="FindSolution.cs" />
     <Compile Include="IFindSolution.cs" />
+    <Compile Include="IVerifySubmission.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VerifySubmission.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SageOneSample.Repository\SageOneSample.Repository.csproj">
