--- a/SageOneSample/SageOneSample.Presentaion.csproj
+++ b/SageOneSample/SageOneSample.Presentaion.csproj
@@ -154,8 +154,8 @@
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\SudokuAPIController.cs" />
     <Compile Include="Controllers\SudokuController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
